--- a/src/components/background/Ball.css
+++ b/src/components/background/Ball.css
@@ -1,17 +1,45 @@
 .animate-bounce {
-  animation: bounce 2s infinite;
+  animation: bounce 3s infinite;
 }
-
-
+.animate-bounce-left {
+  animation: bounce-x-left 3s infinite;
+}
+.animate-bounce-right {
+  animation: bounce-x-right 3s infinite;
+}
 
 @keyframes bounce {
   0% {
-    transform: translateY(-100px) scale(1);
+    transform: translateY(-100px) scale(0.7);
   }
   50% {
     transform: translateY(0) scale(1.2);
   }
   100% {
-    transform: translateY(-100px) scale(1);
+    transform: translateY(-100px) scale(0.7);
+  }
+}
+
+@keyframes bounce-x-left {
+  0% {
+    transform: translateX(-500px) scale(0.5);
+  }
+  50% {
+    transform: translateY(0) scale(1.2);
+  }
+  100% {
+    transform: translateX(-500px) scale(0.5);
+  }
+}
+
+@keyframes bounce-x-right {
+  0% {
+    transform: translateX(500px) scale(0.5);
+  }
+  50% {
+    transform: translateY(0) scale(1.2);
+  }
+  100% {
+    transform: translateX(500px) scale(0.5);
   }
 }
