--- a/src/components/showcase/style.css
+++ b/src/components/showcase/style.css
@@ -1,8 +1,8 @@
-.focus:focus {
-  background-image: "linear-gradient(135deg, rgba(139, 92, 246, 0.2), rgba(59, 130, 246)";
-}
-
 .content {
+  width: 100%;
+  height: auto;
+
+  margin-top: 30px;
   transition: opacity 0.5s ease-in-out;
   opacity: 0;
   position: absolute; /* Para sobrepor os componentes */
