--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@
   top: 70px;
   right: -100%;
   width: 100%;
-  height: 25vh;
+  /* height: 25vh; */
   /* background-color: #333; */
   transition: all 0.5s ease-in-out;
 }
