--- a/src/index.css
+++ b/src/index.css
@@ -47,9 +47,33 @@
   margin-top: 30px;
   transition: opacity 0.5s ease-in-out;
   opacity: 0;
-  /* position: absolute; Para sobrepor os componentes */
 }
 
 .content.active {
   opacity: 1;
+}
+
+@layer utilities {
+  .scrollbar-custom::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    background-color: #3b82f6; /* azul */
+    border-radius: 9999px;
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-thumb:hover {
+    background: #2563eb; /* azul mais escuro */
+  }
+
+  /* Para Firefox */
+  .scrollbar-custom {
+    scrollbar-width: thin;
+    scrollbar-color: #3b82f6 #f1f1f1;
+  }
 }
